DB設置、残高確認
