# gen/http/balance/server/types.go
@@ -1,0 +1,40 @@
+// Code generated by goa v3.23.1, DO NOT EDIT.
+//
+// balance HTTP server types
+//
+// Command:
+// $ goa gen stock-bot/design
+
+package server
+
+import (
+	balanceviews "stock-bot/gen/balance/views"
+)
+
+// GetResponseBody is the type of the "balance" service "get" endpoint HTTP
+// response body.
+type GetResponseBody struct {
+	// 現物株式買付可能額
+	AvailableCashForStock float64 `form:"available_cash_for_stock" json:"available_cash_for_stock" xml:"available_cash_for_stock"`
+	// 信用新規建可能額
+	AvailableMarginForNewPosition float64 `form:"available_margin_for_new_position" json:"available_margin_for_new_position" xml:"available_margin_for_new_position"`
+	// 委託保証金率(%)
+	MarginMaintenanceRate float64 `form:"margin_maintenance_rate" json:"margin_maintenance_rate" xml:"margin_maintenance_rate"`
+	// 出金可能額
+	WithdrawableCash float64 `form:"withdrawable_cash" json:"withdrawable_cash" xml:"withdrawable_cash"`
+	// 追証発生フラグ (1:発生, 0:未発生)
+	HasMarginCall bool `form:"has_margin_call" json:"has_margin_call" xml:"has_margin_call"`
+}
+
+// NewGetResponseBody builds the HTTP response body from the result of the
+// "get" endpoint of the "balance" service.
+func NewGetResponseBody(res *balanceviews.StockbotBalanceView) *GetResponseBody {
+	body := &GetResponseBody{
+		AvailableCashForStock:         *res.AvailableCashForStock,
+		AvailableMarginForNewPosition: *res.AvailableMarginForNewPosition,
+		MarginMaintenanceRate:         *res.MarginMaintenanceRate,
+		WithdrawableCash:              *res.WithdrawableCash,
+		HasMarginCall:                 *res.HasMarginCall,
+	}
+	return body
+}
