# gen/http/openapi.yaml
@@ -13,6 +13,20 @@ produces:
     - application/xml
     - application/gob
 paths:
+    /balance:
+        get:
+            tags:
+                - balance
+            summary: get balance
+            description: Get the account balance summary.
+            operationId: balance#get
+            responses:
+                "200":
+                    description: OK response.
+                    schema:
+                        $ref: '#/definitions/StockbotBalance'
+            schemes:
+                - http
     /order:
         post:
             tags:
@@ -63,30 +77,30 @@ definitions:
                 type: number
                 description: 発注価格 (LIMIT注文の場合)
                 default: 0
-                example: 0.8827882884963427
+                example: 0.1347582874179467
                 format: double
             quantity:
                 type: integer
                 description: 発注数量
-                example: 17609653031739276758
+                example: 2270718033551387091
                 format: int64
             symbol:
                 type: string
                 description: '銘柄コード (例: 7203)'
-                example: Dolorem non.
+                example: Assumenda ipsa hic.
             trade_type:
                 type: string
                 description: 売買区分 (BUY/SELL)
-                example: SELL
+                example: BUY
                 enum:
                     - BUY
                     - SELL
         example:
             is_margin: false
-            order_type: STOP
-            price: 0.1347582874179467
-            quantity: 2270718033551387091
-            symbol: Assumenda ipsa hic.
+            order_type: STOP_LIMIT
+            price: 0.843209432081459
+            quantity: 803274372156565567
+            symbol: Pariatur pariatur animi porro voluptas.
             trade_type: BUY
         required:
             - symbol
@@ -100,9 +114,50 @@ definitions:
             order_id:
                 type: string
                 description: 受付済み注文ID
-                example: Sint numquam commodi qui molestiae nemo.
+                example: Placeat non.
         description: ID of the created order
         example:
-            order_id: Id similique atque ipsum deserunt nihil placeat.
+            order_id: Non consequatur facilis id pariatur recusandae.
         required:
             - order_id
+    StockbotBalance:
+        title: 'Mediatype identifier: application/vnd.stockbot.balance; view=default'
+        type: object
+        properties:
+            available_cash_for_stock:
+                type: number
+                description: 現物株式買付可能額
+                example: 0.8173181758295754
+                format: double
+            available_margin_for_new_position:
+                type: number
+                description: 信用新規建可能額
+                example: 0.7696922923213877
+                format: double
+            has_margin_call:
+                type: boolean
+                description: 追証発生フラグ (1:発生, 0:未発生)
+                example: true
+            margin_maintenance_rate:
+                type: number
+                description: 委託保証金率(%)
+                example: 0.9674332956073177
+                format: double
+            withdrawable_cash:
+                type: number
+                description: 出金可能額
+                example: 0.9122348276903529
+                format: double
+        description: GetResponseBody result type (default view)
+        example:
+            available_cash_for_stock: 0.8026494646868956
+            available_margin_for_new_position: 0.6526836415105997
+            has_margin_call: true
+            margin_maintenance_rate: 0.9088583349006569
+            withdrawable_cash: 0.7808435872712735
+        required:
+            - available_cash_for_stock
+            - available_margin_for_new_position
+            - margin_maintenance_rate
+            - withdrawable_cash
+            - has_margin_call
